Fix alignment of the contact section
Set the contact section to align to the start of the section to make all four section in same line.

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer {
 .main_footer_container {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     gap: 10%;
     width: 100%;
 }
